@@ -37,6 +37,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #12591: Allow io.TextIOWrapper to work with raw IO objects (without
+  a read1() method), and add an undocumented *write_through* parameter to
+  mandate unbuffered writes.
+
 - Issue #10883: Fix socket leaks in urllib.request when using FTP.
 
 - Issue #12592: Make Python build on OpenBSD 5 (and future major releases).
